hphp/hack/test/typecheck/switch/three_defaults.php.exp
File "three_defaults.php", line 8, characters 5-12:
There can be only one `default` case in `switch` (Parsing[1002])
